# list-service

./: .gitignore  README.md  pyproject.toml
api/: settings.py  urls.py
api/quickstart/: views.py
service/: config.py  settings.py  urls.py
service/list_api/: apps.py  models.py  serializers.py  views.py
service/list_api/migrations/: 0001_initial.py  0002_remove_listitem_user.py
service/list_api/tests/: test_list_items_api.py
service/user_api/: apps.py  views.py
